Refaktorert kode, oppdatert avhengigheter, oppdatert workflows, lagt til og forbedret tester og valideringer